deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: transmission
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      automountServiceAccountToken: false
      containers:
        - name: transmission
          # v4.0.6-r0
          image: ghcr.io/jdmarble/container-transmission@sha256:add3a431ea61432cfca6a0a434e00084540355ecd3445b7c606b0de8666ee1c5
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /transmission
              port: http
          readinessProbe:
            httpGet:
              path: /transmission
              port: http
          resources:
            # I just made these up.
            # Measure your actual needs or omit.
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10000
            runAsGroup: 10000
          volumeMounts:
            - name: static-config
              mountPath: /config/settings.json
              subPath: settings.json
            - name: persistent-config
              mountPath: /config
            - name: download
              mountPath: /download
            - name: tmp
              mountPath: /tmp
      securityContext:
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: static-config
          configMap:
            name: transmission
        - name: persistent-config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: download
          persistentVolumeClaim:
            claimName: download
        - name: tmp
          emptyDir: {}
