deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: transmission
  name: transmission
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: transmission
  type: ClusterIP
